[metadata]
name = tempe_covid
version = attr: tempe_covid.__version__
url = https://github.com/mahaloz/tempe-covid
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Understand COVID-19 wastewater trends in Tempe
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    requests
    numpy
    pandas
    matplotlib
    toml

python_requires = >= 3.6
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    tempe_covid = tempe_covid.__main__:main

